[package]
name = "cwa_images"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1", features = ["full"]}
serde_json = "1.0.120"
url = "2.5.2"
log = "0.4.22"
bytes = "1.6.1"
env_logger = "0.11.3"
swc_common = "0.36.1"
swc_ecma_ast = "0.117.1"
swc_ecma_parser = "0.148.1"

[profile.release]
lto = true
strip = true
opt-level = "s"
panic = "abort"
