[package]
name = "cwa_images"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1", features = ["full"]}
serde_json = "1.0.120"
url = "2.5.2"
log = "0.4.22"
bytes = "1.6.1"
env_logger = "0.11.3"
swc_common = "0.36.1"
swc_ecma_ast = "0.117.1"
swc_ecma_parser = "0.148.1"
lazy_static = "1.5.0"
futures-core = "0.3.30"
futures-util = "0.3.30"

[profile.release]
lto = true
strip = true
opt-level = "s"
panic = "abort"
